# KernelPositionalEncoding

./: .gitattributes  .gitignore  README_experiment1.md  TODO.md  overview.tex  overview_fullrevise.tex  overview_revised.tex  pyproject.toml
experiment1/: __init__.py  boundary_analysis.py  config.py  experiment1overview.md  experiment1results.md  generate_figures.py  norm_utils.py  paths.py  presentation.html  report_trackb_gpuopt_parity.py  run.py  shift_kernels.py  spectral.py  track_a.py  track_b.py
experiment2/: __init__.py  analysis.py  config.py  example_cache.py  execution.py  experiment2overview.md  flooring.py  head_groups.py  interventions.py  kernels.py  long_offset_lock.json  long_offsets.py  posthoc_centered.py  presentationexp2.html  provenance.py  run.py  stats.py  summarize.py  tasks.py  tier1.py  verify_centered_parity.py
experiment3/: __init__.py  regenerate_results_report.py  rerun_analysis_only.py  stats_utils.py  theory10_feeder_specificity.py  theory1_si_circuits.py  theory3_crossterm_correlation.py  theory5_subword_ablation.py  theory5b_boundary_detection.py  theory7b_activation_patching.py
scripts/: check_tokenized_manifest.py  download_assets.py  experiment2_adapter_smoke.py  experiment2_build_manifests_gpu.sh  experiment2_execute_manifest_gpu.sh  experiment2_modelpin_execute.sh  experiment2_modelpin_launch.sh  experiment2_modelpin_launch_p2ab.sh  experiment2_modelpin_prepare.sh  experiment2_modelpin_prepare_p2ab.sh  experiment2_pair_sweep_expand_launch.sh  experiment2_pair_sweep_manifest.py  experiment2_pair_sweep_report.py  (+51 more)
(+1685 files in other folders)
